# unfazed-taskiq

./: .env  .gitignore  Dockerfile  Makefile  README.md  changelog.md  docker-compose.yml  example_usage.py  pyproject.toml
.github/workflows/: test.yml
tests/: conftest.py
tests/proj/: asgi.py
tests/proj/app1/: endpoints.py  routes.py  tasks.py
tests/proj/entry/: routes.py  settings.py
tests/proj/entry2/: settings.py
tests/test_agent/: test_handler.py  test_model.py
tests/test_base/: test_agent.py  test_base.py  test_decorators.py  test_lifespan.py  test_middleware.py
tests/test_cli/: test_scheduler.py  test_worker.py
tests/test_registry/: test_task.py
tests/test_scheduler/: test_models.py  test_source.py
tests/test_taskiq/: test_api.py  test_base.py  test_cli.py  test_tasks.py
unfazed_taskiq/: __init__.py  agent.py  base.py  cli.py  decorators.py  lifespan.py  logger.py  middleware.py  registry.py  settings.py
unfazed_taskiq/agent/: __init__.py  handler.py  model.py
unfazed_taskiq/cli/scheduler/: __init__.py  args.py  cmd.py
unfazed_taskiq/cli/worker/: __init__.py  cmd.py
unfazed_taskiq/contrib/scheduler/: __init__.py  admin.py  models.py  serializer.py  sources.py
unfazed_taskiq/registry/: task.py
unfazed_taskiq/schema/: registry.py
unfazed_taskiq/schema/registry/: task.py
